--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.18.0",
     "lucide": "^0.471.0",
     "lucide-react": "^0.471.0",
     "next": "15.1.4",
