--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.0",
+    "geist": "^1.3.1",
     "lucide": "^0.471.0",
     "lucide-react": "^0.471.0",
     "next": "15.1.4",
