--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.0",
     "geist": "^1.3.1",
+    "gsap": "^3.12.7",
     "lucide": "^0.471.0",
     "lucide-react": "^0.471.0",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-horizontal-scrolling-menu": "^8.2.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.1"
