--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-horizontal-scrolling-menu": "^8.2.0",
     "react-redux": "^9.2.0",
+    "react-use": "^17.6.0",
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.1"
   },
