--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
+    "@sanity/image-url": "^1.1.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.0",
     "geist": "^1.3.1",
@@ -17,6 +18,7 @@
     "lucide": "^0.471.0",
     "lucide-react": "^0.471.0",
     "next": "15.1.4",
+    "next-sanity": "^9.10.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-horizontal-scrolling-menu": "^8.2.0",
