--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.7.0",
     "@sanity/image-url": "^1.1.0",
+    "@types/nodemailer": "^6.4.17",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
@@ -22,8 +24,10 @@
     "gsap": "^3.12.7",
     "lucide": "^0.471.0",
     "lucide-react": "^0.471.2",
+    "mongodb": "^6.17.0",
     "next": "15.1.4",
     "next-sanity": "^9.10.2",
+    "nodemailer": "^7.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
