--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "db:init": "tsx src/scripts/init-db.ts",
+    "db:indexes": "tsx src/scripts/create-indexes.ts",
     "lint": "next lint"
   },
   "dependencies": {
@@ -17,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.18.0",
@@ -51,6 +54,7 @@
     "eslint-config-next": "15.1.4",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.7.0",
     "typescript": "^5"
   }
 }
