--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@sanity/image-url": "^1.1.0",
     "@types/nodemailer": "^6.4.17",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
@@ -25,6 +26,7 @@
     "framer-motion": "^11.18.0",
     "geist": "^1.3.1",
     "gsap": "^3.12.7",
+    "jose": "^6.0.11",
     "lucide": "^0.471.0",
     "lucide-react": "^0.471.2",
     "mongodb": "^6.17.0",
@@ -46,6 +48,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
