--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "framer-motion": "^11.18.0",
     "geist": "^1.3.1",
     "gsap": "^3.12.7",
+    "ioredis": "^5.6.1",
     "jose": "^6.0.11",
     "lucide": "^0.471.0",
     "lucide-react": "^0.471.2",
