--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lucide": "^0.471.0",
     "lucide-react": "^0.471.2",
     "mongodb": "^6.17.0",
+    "mongoose": "^8.16.4",
     "next": "15.1.4",
     "next-sanity": "^9.10.2",
     "nodemailer": "^7.0.5",
