chore: fixed the build error

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "dotenv": "^16.4.7",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
