--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-horizontal-scrolling-menu": "^8.2.0",
     "react-redux": "^9.2.0",
     "react-use": "^17.6.0",
+    "recharts": "^3.1.0",
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^3.3.0",
