--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "db:init": "tsx src/scripts/init-db.ts",
@@ -11,6 +11,7 @@
     "delivery:init": "tsx src/scripts/init-delivery-fees.ts",
     "init:all": "tsx src/scripts/init-all.ts",
     "lint": "next lint",
+    "clear-cache": "node scripts/clear-analytics-cache.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
